# mot

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: api.py  main.py  manager.py
config/: default.yaml  loader.py  schema.py
detectors/: __init__.py  yolo_detector.py
detectors/detr/: README.md  detr_detector.py  postprocess.py
detectors/detr/tests/: test_postprocess.py
logging_utils/: ring_buffer.py  setup.py
pipeline/: jobs.py  pipeline.py  result.py  stats.py  workers.py
render/: renderer.py
sink/: ffmpeg_srs_sink.py
source/: ffmpeg_source.py  types.py
trackers/: __init__.py  adapter.py
trackers/bytetrack/: basetrack.py  bytetrack.py  iou.py  kalman_filter.py  matching.py
trackers/common/: __init__.py  basetrack.py  detection.py  iou.py  kalman_filter.py  matching.py
trackers/detr/: README.md  appearance.py  appearance_matching.py  demo.py  detr_tracker.py
trackers/detr/tests/: test_smoke.py
